src/objects/Grant_Report__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Categories__c</fullName>
        <label>Additional Categories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount by line items</description>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Info_Has_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has there been a change in contacts, address, etc?</description>
        <label>Contact Info Has Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dr_Lenz_Material_Utilization__c</fullName>
        <description>To what extent has the organization utilized the writings, tapes and/or music of Dr. Frederick Lenz (Rama)?</description>
        <label>Dr.Lenz Material Utilization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Contact Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Funds_Were_Utilized__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Grant Funds Were Utilized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Grant Reports</relationshipLabel>
        <relationshipName>Grant_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_The_Grant_Met_Its_Goals__c</fullName>
        <description>Has the grant met its goals and the need served?</description>
        <label>Has The Grant Met Its Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Difficulties__c</fullName>
        <description>Have you encountered any difficulties implementing the grant program?</description>
        <label>Implementation Difficulties</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Salesforce locks the access to the Grant Report when Status = &quot;Approved&quot;</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>News_Coverage__c</fullName>
        <description>Has there been any relevant news coverage or reviews</description>
        <label>News Coverage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Changes__c</fullName>
        <description>Have there been any material changes in your organization that would affect your ability to perform?</description>
        <label>Organization Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Relevant_Information__c</fullName>
        <description>Any other information relevant information including a general overview if desired</description>
        <label>Other Relevant Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status when the Grant Report is reviewing</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Needs More Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <description>The date on which report was submitted by a grantee</description>
        <inlineHelpText>The date on which report was submitted by a grantee</inlineHelpText>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_People_Impacted__c</fullName>
        <description>Total number of people the grant has impacted</description>
        <label>Total Number Of People Impacted</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Grant Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>To_Be_Processed</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>To Be Processed</label>
    </listViews>
    <nameField>
        <displayFormat>GR-{00000}</displayFormat>
        <label>Grant Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>